--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,12 +3,13 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "edu.tarleton.mike168m.control"
-        minSdkVersion 18
+        applicationId "com.example.mosei.control"
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary= true
     }
     buildTypes {
         release {
@@ -21,8 +22,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    // charts
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    // ioio
+    compile 'com.github.ytai.ioio:IOIOLibAndroid:5.05'
+    compile 'com.github.ytai.ioio:IOIOLibAndroidBluetooth:5.05'
+    compile 'com.github.ytai.ioio:IOIOLibAndroidAccessory:5.05'
+    compile 'com.github.ytai.ioio:IOIOLibAndroidDevice:5.05'
 }
