Use IOIOActivity instead

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             <meta-data android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
                 android:resource="@xml/device_filter" />
         </activity>
+        <service android:enabled="true" android:name="com.example.mosei.control.CommuncationService"></service>
     </application>
 
 </manifest>
