--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     // charts
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.github.lecho:hellocharts-android:v1.5.8'
     // ioio
     compile 'com.github.ytai.ioio:IOIOLibAndroid:5.05'
     compile 'com.github.ytai.ioio:IOIOLibAndroidBluetooth:5.05'
